feat: add image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
 <body>
 <p>awesome content</p>
+
+<br>
+
+<img src="./images/two-wallpapers-of-the-from-zero-album-v0-4cahpfjfdfnd1.jpg" alt="" style="width: 60%; height: 60%"/>
 </body>
 
 </html>
